--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>首页 - Nulladev</title>
+		<title>关于我们 - Nulladev</title>
 	</head>
 	<body>
 		<img src="images/logo.jpg" width="200" height="150" alt="logo" />
@@ -12,6 +12,7 @@
 			<a href="product/index.html">作品</a>
 		</nav>
 		<br>
+		群号：159628975<br>
 		Nulladev，国内最业余的业余开发组。<br>
 	</body>
 </html>
