--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
 			<a href="product/index.html">作品</a>
 		</nav>
 		<br>
-		群号：159628975<br>
-		Nulladev，国内最业余的业余开发组。<br>
+		Nulladev是国内最业余的业余开发组。<br>
+		QQ群号：159628975<br>
 	</body>
 </html>
