--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<a href="product/index.html">作品</a>
 		</nav>
 		<br>
-		Nulladev，国内最业余的业余开发组。<br>
+		这里是请不起美工的Nulladev开发组官网。<br>
+		由于组长本人完全不会前端，因此本界面是组长21分钟从入门到精通写完的。<br>
+		如果您看不到左上角的logo，是因为我懒得备案网站所以用github建站，而github的raw被封了，上个梯子即可解决。<br>
 	</body>
 </html>
