--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<title>首页 - Nulladev</title>
 	</head>
 	<body>
-		<img src="images/logo.jpg" width="200" height="150" alt="logo" />
+		<img src="/images/logo.jpg" width="200" height="150" alt="logo" />
 		<nav>
-			<a href="index.html">首页</a>
-			<a href="about/index.html">关于</a>
-			<a href="product/index.html">作品</a>
+			<a href="/index.html">首页</a>
+			<a href="/about/index.html">关于</a>
+			<a href="/product/index.html">作品</a>
 		</nav>
 		<br>
 		这里是请不起美工的Nulladev开发组官网。<br>
