--- a/product/index.html
+++ b/product/index.html
@@ -4,11 +4,11 @@
 		<title>作品展示 - Nulladev</title>
 	</head>
 	<body>
-		<img src="images/logo.jpg" width="200" height="150" alt="logo" />
+		<img src="/images/logo.jpg" width="200" height="150" alt="logo" />
 		<nav>
-			<a href="index.html">首页</a>
-			<a href="about/index.html">关于</a>
-			<a href="product/index.html">作品</a>
+			<a href="/index.html">首页</a>
+			<a href="/about/index.html">关于</a>
+			<a href="/product/index.html">作品</a>
 		</nav>
 		<br>
 		作品展示：<br>
