--- a/product/index.html
+++ b/product/index.html
@@ -21,7 +21,7 @@
 		<a href="https://github.com/NullaDev/SBSTG">源码</a><br>
 		<br>
 		自动保存小助手：一个在后台自动按Ctrl+S的小工具<br>
-		<a href="files/自动保存小助手.jar">下载</a><br>
+		<a href="/files/自动保存小助手.jar">下载</a><br>
 		<a href="https://github.com/NullaDev/AutoSaveBot">源码</a><br>
 		<br>
 	</body>
